tests/golden/type_errors/generic_enum_constraint.cd
enum Box<T: number> {
  Value(value: T),
}

let value = Box.Value("text");
