tests/golden/type_errors/generic_enum_constraint.err
Type error at 5:29: enum Box: type parameter T must satisfy number, got string
  let value = Box.Value("text");
                              ^
